// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Label (snapshot) merges className 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mt-4"
>
  Username
</label>
`;

exports[`Label (snapshot) renders default label 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
>
  Username
</label>
`;

exports[`Label (snapshot) renders label with htmlFor 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
  for="username-input"
>
  Username
</label>
`;
